style: ajusta id modais e posiciona todas juntas

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto gap-0 gap-lg-3 p-3 p-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#quemSomosModal">
                             Quem Somos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#estatutoModal">
                             Estatuto
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Transparência</a>
+                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">Transparência</a>
                     </li>
                 </ul>
                 <div class="ms-lg-5 pb-3 pb-lg-0">
@@ -50,29 +50,6 @@
             </div>
         </div>
     </nav>
-    <!-- Modais -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content rounded-4">
-                <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="exampleModalLabel">Estatuto</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
-                    suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
-                    nisi. Feugiat mattis sed donec auctor vulputate mauris mauris ipsum. Erat euismod sed vitae diam
-                    magna dolor egestas nec. Amet egestas facilisis dignissim consequat senectus. At euismod ut arcu ut
-                    vivamus ac. Porttitor ipsum neque venenatis enim ipsum sit. Cras hendrerit mi quam eu ut sagittis
-                    est. Diam tortor ornare eu sapien dui molestie bibendum est sagittis. Adipiscing velit nulla feugiat
-                    ultrices eget turpis sed ultricies diam. Interdum sit duis et amet congue. Vitae imperdiet sed ac
-                    nullam et ultrices. Viverra varius praesent velit volutpat vitae dignissim turpis lectus amet.
-                    Euismod ut ultricies quisque nunc viverra lacus posuere morbi. Tortor feugiat sodales vestibulum
-                    tortor. Tortor mattis pretium nulla mattis erat a.
-                </div>
-            </div>
-        </div>
-    </div>
     <header>
         <div class="container-fluid">
             <div class="row align-items-end align-items-xl-center header flex-column flex-sm-row">
@@ -106,33 +83,7 @@
                             de vulnerabilidade pessoal e social.
                         </p>
                         <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" role="button"
-                            data-bs-toggle="modal" data-bs-target="#exampleModal4">Saiba Mais</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel4"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content rounded-4">
-                        <div class="modal-header">
-                            <h2 class="modal-title fs-5" id="exampleModalLabel4">Quem Somos</h2>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
-                            trabalho do “Cantinho o Idoso” com um pequeno grupo de idosos moradores do Bairro São
-                            Cristóvão. <br>
-                            Nossa maior atenção volta-se a políticas promotoras de inclusão social e política
-                            socioassistencial, vistas como direito do cidadão e dever do Estado. Através da criação de
-                            novos valores, maneiras de pensar, sentir e de agir, tornando fáceis as transformações e
-                            modificações dessas relações sociais que vão a cada dia enriquecendo-se mais. <br>
-                            Com esse carisma de atender indistintamente à pessoa idosa, foi conquistando os seus
-                            familiares, vizinhos e amigos a apoiarem no desenvolvimento de ações promotoras do direito
-                            da pessoa idosa, através de um Serviço de Convivência. O GIVM tem como missão envolver
-                            socialmente as pessoas idosas, fazendo com que elas se sintam parte da sociedade e obtenham
-                            maior qualidade de vida aos seus dias.
-                        </div>
+                            data-bs-toggle="modal" data-bs-target="#quemSomosModal">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +101,7 @@
                                 <img src="./img/icons/flecha-e-alvo.svg" class="img-fluid pt-3 pb-3" alt="Flecha"
                                     width="100">
                                 <h3 class="text-proposito fs-2">Missão</h3>
-                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#missaoModal">
                                     Desenvolvimento social
                                 </a>
                             </div>
@@ -159,7 +110,7 @@
                             <div class="card-body">
                                 <img src="./img/icons/olho.svg" class="img-fluid pt-3 pb-3" alt="Olho" width="100">
                                 <h3 class="text-proposito fs-2">Visão</h3>
-                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#visaoModal">
                                     Impacto social
                                 </a>
                             </div>
@@ -169,7 +120,7 @@
                                 <img src="./img/icons/coracao.svg" class="img-fluid pt-3 pb-3" alt="Coração"
                                     width="100">
                                 <h3 class="text-proposito fs-2">Valores</h3>
-                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#valoresModal">
                                     Responsabilidade social
                                 </a>
                             </div>
@@ -177,53 +128,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Modais -->
-            <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content rounded-4">
-                        <div class="modal-header">
-                            <h2 class="modal-title fs-5" id="exampleModalLabel1">Missão</h2>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando
-                            seu desenvolvimento pessoal, familiar e social, oferecendo atividades coletivas para que
-                            possam envelhecer com mais dignidade, autonomia e longevidade.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content rounded-4">
-                        <div class="modal-header">
-                            <h2 class="modal-title fs-5" id="exampleModalLabe2">Visão</h2>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na
-                            vida das pessoas idosas vulneráveis socialmente em virtude da humanização, eficiência e
-                            excelência dos serviços prestados.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal fade " id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content rounded-4">
-                        <div class="modal-header">
-                            <h2 class="modal-title fs-5" id="exampleModalLabe3">Valores</h2>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade;
-                            Atendimento Humanizado; Respeito<br> à Diversidade; Transparência; Responsabilidade Social.
-                        </div>
-                    </div>
-                </div>
         </section>
         <!--projetos-->
         <section>
@@ -375,6 +279,120 @@
             </div>
         </section>
     </main>
+    <!-- Modais -->
+    <div class="modal fade" id="quemSomosModal" tabindex="-1" aria-labelledby="quemSomosModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="quemSomosModalLabel">Quem Somos</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
+                    trabalho do “Cantinho o Idoso” com um pequeno grupo de idosos moradores do Bairro São
+                    Cristóvão. <br>
+                    Nossa maior atenção volta-se a políticas promotoras de inclusão social e política
+                    socioassistencial, vistas como direito do cidadão e dever do Estado. Através da criação de
+                    novos valores, maneiras de pensar, sentir e de agir, tornando fáceis as transformações e
+                    modificações dessas relações sociais que vão a cada dia enriquecendo-se mais. <br>
+                    Com esse carisma de atender indistintamente à pessoa idosa, foi conquistando os seus
+                    familiares, vizinhos e amigos a apoiarem no desenvolvimento de ações promotoras do direito
+                    da pessoa idosa, através de um Serviço de Convivência. O GIVM tem como missão envolver
+                    socialmente as pessoas idosas, fazendo com que elas se sintam parte da sociedade e obtenham
+                    maior qualidade de vida aos seus dias.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="estatutoModal" tabindex="-1" aria-labelledby="estatutoModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="estatutoModalLabel">Estatuto</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
+                    suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
+                    nisi. Feugiat mattis sed donec auctor vulputate mauris mauris ipsum. Erat euismod sed vitae diam
+                    magna dolor egestas nec. Amet egestas facilisis dignissim consequat senectus. At euismod ut arcu ut
+                    vivamus ac. Porttitor ipsum neque venenatis enim ipsum sit. Cras hendrerit mi quam eu ut sagittis
+                    est. Diam tortor ornare eu sapien dui molestie bibendum est sagittis. Adipiscing velit nulla feugiat
+                    ultrices eget turpis sed ultricies diam. Interdum sit duis et amet congue. Vitae imperdiet sed ac
+                    nullam et ultrices. Viverra varius praesent velit volutpat vitae dignissim turpis lectus amet.
+                    Euismod ut ultricies quisque nunc viverra lacus posuere morbi. Tortor feugiat sodales vestibulum
+                    tortor. Tortor mattis pretium nulla mattis erat a.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="transparenciaModal" tabindex="-1" aria-labelledby="transparenciaModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="transparenciaModalLabel">Transparência</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
+                    suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
+                    nisi. Feugiat mattis sed donec auctor vulputate mauris mauris ipsum. Erat euismod sed vitae diam
+                    magna dolor egestas nec. Amet egestas facilisis dignissim consequat senectus. At euismod ut arcu ut
+                    vivamus ac. Porttitor ipsum neque venenatis enim ipsum sit. Cras hendrerit mi quam eu ut sagittis
+                    est. Diam tortor ornare eu sapien dui molestie bibendum est sagittis. Adipiscing velit nulla feugiat
+                    ultrices eget turpis sed ultricies diam. Interdum sit duis et amet congue. Vitae imperdiet sed ac
+                    nullam et ultrices. Viverra varius praesent velit volutpat vitae dignissim turpis lectus amet.
+                    Euismod ut ultricies quisque nunc viverra lacus posuere morbi. Tortor feugiat sodales vestibulum
+                    tortor. Tortor mattis pretium nulla mattis erat a.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="missaoModal" tabindex="-1" aria-labelledby="missaoModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="missaoModalLabel">Missão</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando
+                    seu desenvolvimento pessoal, familiar e social, oferecendo atividades coletivas para que
+                    possam envelhecer com mais dignidade, autonomia e longevidade.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="visaoModal" tabindex="-1" aria-labelledby="visaoModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="visaoModalLabel">Visão</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na
+                    vida das pessoas idosas vulneráveis socialmente em virtude da humanização, eficiência e
+                    excelência dos serviços prestados.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade " id="valoresModal" tabindex="-1" aria-labelledby="valoresModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="valoresModalLabel">Valores</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade;
+                    Atendimento Humanizado; Respeito<br> à Diversidade; Transparência; Responsabilidade Social.
+                </div>
+            </div>
+        </div>
+    </div>
     <!--rodapé-->
     <footer class="mt-5">
         <div class="rodape">
@@ -389,9 +407,9 @@
                     </div>
                     <div class="col-12 col-md rodape-links pt-4">
                         <h3 class="rodape-text">Links</h3>
-                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Quem Somos</a>
-                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Estatuto</a>
-                        <a class="rodape-a d-block text-decoration-none">Transparência</a>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#quemSomosModal">Quem Somos</a>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#estatutoModal">Estatuto</a>
+                        <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">Transparência</a>
                     </div>
                     <div class="col-12 col-md pt-4">
                         <h3 class="rodape-text">Contatos</h3>
