--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -30,17 +30,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto gap-0 gap-lg-3 p-3 p-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#quemSomosModal">
                             Quem Somos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#estatutoModal">
                             Estatuto
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Transparência</a>
+                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">Transparência</a>
                     </li>
                 </ul>
                 <div class="ms-lg-5 pb-3 pb-lg-0">
@@ -50,54 +50,6 @@
             </div>
         </div>
     </nav>
-    <!-- Modais -->
-    <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel4"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content rounded-4">
-                        <div class="modal-header">
-                            <h2 class="modal-title fs-5" id="exampleModalLabel4">Quem Somos</h2>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
-                            trabalho do “Cantinho o Idoso” com um pequeno grupo de idosos moradores do Bairro São
-                            Cristóvão. <br>
-                            Nossa maior atenção volta-se a políticas promotoras de inclusão social e política
-                            socioassistencial, vistas como direito do cidadão e dever do Estado. Através da criação de
-                            novos valores, maneiras de pensar, sentir e de agir, tornando fáceis as transformações e
-                            modificações dessas relações sociais que vão a cada dia enriquecendo-se mais. <br>
-                            Com esse carisma de atender indistintamente à pessoa idosa, foi conquistando os seus
-                            familiares, vizinhos e amigos a apoiarem no desenvolvimento de ações promotoras do direito
-                            da pessoa idosa, através de um Serviço de Convivência. O GIVM tem como missão envolver
-                            socialmente as pessoas idosas, fazendo com que elas se sintam parte da sociedade e obtenham
-                            maior qualidade de vida aos seus dias.
-                        </div>
-                    </div>
-                </div>
-            </div>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content rounded-4">
-                <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="exampleModalLabel">Estatuto</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
-                    suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
-                    nisi. Feugiat mattis sed donec auctor vulputate mauris mauris ipsum. Erat euismod sed vitae diam
-                    magna dolor egestas nec. Amet egestas facilisis dignissim consequat senectus. At euismod ut arcu ut
-                    vivamus ac. Porttitor ipsum neque venenatis enim ipsum sit. Cras hendrerit mi quam eu ut sagittis
-                    est. Diam tortor ornare eu sapien dui molestie bibendum est sagittis. Adipiscing velit nulla feugiat
-                    ultrices eget turpis sed ultricies diam. Interdum sit duis et amet congue. Vitae imperdiet sed ac
-                    nullam et ultrices. Viverra varius praesent velit volutpat vitae dignissim turpis lectus amet.
-                    Euismod ut ultricies quisque nunc viverra lacus posuere morbi. Tortor feugiat sodales vestibulum
-                    tortor. Tortor mattis pretium nulla mattis erat a.
-                </div>
-            </div>
-        </div>
-    </div>
     <!--header-->
     <header class="header-grupo pt-4 pb-5 d-flex align-items-center justify-content-center">
         <div class="container ">
@@ -211,6 +163,75 @@
             </div>
         </section>
     </main>
+    <!-- Modais -->
+    <div class="modal fade" id="quemSomosModal" tabindex="-1" aria-labelledby="quemSomosModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="quemSomosModalLabel">Quem Somos</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
+                    trabalho do “Cantinho o Idoso” com um pequeno grupo de idosos moradores do Bairro São
+                    Cristóvão. <br>
+                    Nossa maior atenção volta-se a políticas promotoras de inclusão social e política
+                    socioassistencial, vistas como direito do cidadão e dever do Estado. Através da criação de
+                    novos valores, maneiras de pensar, sentir e de agir, tornando fáceis as transformações e
+                    modificações dessas relações sociais que vão a cada dia enriquecendo-se mais. <br>
+                    Com esse carisma de atender indistintamente à pessoa idosa, foi conquistando os seus
+                    familiares, vizinhos e amigos a apoiarem no desenvolvimento de ações promotoras do direito
+                    da pessoa idosa, através de um Serviço de Convivência. O GIVM tem como missão envolver
+                    socialmente as pessoas idosas, fazendo com que elas se sintam parte da sociedade e obtenham
+                    maior qualidade de vida aos seus dias.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="estatutoModal" tabindex="-1" aria-labelledby="estatutoModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="estatutoModalLabel">Estatuto</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
+                    suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
+                    nisi. Feugiat mattis sed donec auctor vulputate mauris mauris ipsum. Erat euismod sed vitae diam
+                    magna dolor egestas nec. Amet egestas facilisis dignissim consequat senectus. At euismod ut arcu ut
+                    vivamus ac. Porttitor ipsum neque venenatis enim ipsum sit. Cras hendrerit mi quam eu ut sagittis
+                    est. Diam tortor ornare eu sapien dui molestie bibendum est sagittis. Adipiscing velit nulla feugiat
+                    ultrices eget turpis sed ultricies diam. Interdum sit duis et amet congue. Vitae imperdiet sed ac
+                    nullam et ultrices. Viverra varius praesent velit volutpat vitae dignissim turpis lectus amet.
+                    Euismod ut ultricies quisque nunc viverra lacus posuere morbi. Tortor feugiat sodales vestibulum
+                    tortor. Tortor mattis pretium nulla mattis erat a.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="transparenciaModal" tabindex="-1" aria-labelledby="transparenciaModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-4">
+                <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="transparenciaModalLabel">Transparência</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
+                    suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
+                    nisi. Feugiat mattis sed donec auctor vulputate mauris mauris ipsum. Erat euismod sed vitae diam
+                    magna dolor egestas nec. Amet egestas facilisis dignissim consequat senectus. At euismod ut arcu ut
+                    vivamus ac. Porttitor ipsum neque venenatis enim ipsum sit. Cras hendrerit mi quam eu ut sagittis
+                    est. Diam tortor ornare eu sapien dui molestie bibendum est sagittis. Adipiscing velit nulla feugiat
+                    ultrices eget turpis sed ultricies diam. Interdum sit duis et amet congue. Vitae imperdiet sed ac
+                    nullam et ultrices. Viverra varius praesent velit volutpat vitae dignissim turpis lectus amet.
+                    Euismod ut ultricies quisque nunc viverra lacus posuere morbi. Tortor feugiat sodales vestibulum
+                    tortor. Tortor mattis pretium nulla mattis erat a.
+                </div>
+            </div>
+        </div>
+    </div>
     <!--rodapé-->
     <footer class="mt-5">
         <div class="rodape">
@@ -225,9 +246,9 @@
                     </div>
                     <div class="col-12 col-md rodape-links pt-4">
                         <h3 class="rodape-text">Links</h3>
-                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Quem Somos</a>
-                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Estatuto</a>
-                        <a class="rodape-a d-block text-decoration-none">Transparência</a>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#quemSomosModal">Quem Somos</a>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#estatutoModal">Estatuto</a>
+                        <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">Transparência</a>
                     </div>
                     <div class="col-12 col-md pt-4">
                         <h3 class="rodape-text">Contatos</h3>
