style: define focus-ring light do btn-close das modais

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -169,7 +169,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="quemSomosModalLabel">Quem Somos</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
@@ -193,7 +193,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="estatutoModalLabel">Estatuto</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
@@ -215,7 +215,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="transparenciaModalLabel">Transparência</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
