--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="quemSomosModalLabel">Quem Somos</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
@@ -309,7 +309,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="estatutoModalLabel">Estatuto</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
@@ -331,7 +331,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="transparenciaModalLabel">Transparência</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
@@ -353,7 +353,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="missaoModalLabel">Missão</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando
@@ -369,7 +369,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="visaoModalLabel">Visão</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na
@@ -384,7 +384,7 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-5" id="valoresModalLabel">Valores</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade;
