--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -51,15 +51,15 @@
         </div>
     </nav>
     <!--header-->
-    <header class="header-grupo pt-4 pb-5 d-flex align-items-center justify-content-center">
+    <header class="py-5 d-flex align-items-center justify-content-center">
         <div class="container ">
-            <div class="row align-items-center header flex-column flex-sm-row">
-                <div class="col-8 ps-5">
-                    <h1 class="h-grupo display-5 pb-2 ">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
-                    <p class="p-grupo ">O Grupo Símios é um coletivo de desenvolvimento profissional, que busca aprimorar habilidades profissionais através do engajamento em projetos voluntários, como o auxílio na criação de websites institucionais para ONGs em todo o Brasil.</p>
+            <div class="row my-5 align-items-center header flex-column flex-sm-row">
+                <div class="col-12 col-md-8 ps-5">
+                    <h1 class="h-grupo display-3 pb-2 ">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
+                    <p class="p-grupo fs-5">O Grupo Símios é um coletivo de desenvolvimento profissional, que busca aprimorar habilidades profissionais através do engajamento em projetos voluntários, como o auxílio na criação de websites institucionais para ONGs em todo o Brasil.</p>
                 </div>
-                <div class="col-4">
-                    <img class="img-grupo img-fluid" src="./img/grupo-simios/logo-simios.png" alt="">
+                <div class="col-12 col-md-4 text-center">
+                    <img class="img-fluid " src="./img/grupo-simios/logo-simios.png" alt="">
                 </div>
             </div>
         </div>
@@ -67,15 +67,19 @@
     <main>
         <!--ongs da web-->
         <section>
-            <div class="projetos container ">
-                <div class="row  flex-column flex-sm-row">
+            <div class="container">
+                <div class="row align-items-center flex-column flex-sm-row">
                     <div class="col-4 mt-5 col-projetos text-center pb-0">
-                        <img class="img-fluid img-projetos pt-5 pb-0" src="./img/cacto-sol.png" alt="" width="316">
+                        <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="">
                     </div>
-                    <div class="col-6 mb-4 mb-md-0">
-                        <h2 class="h-projetos display-4 pb-2 pt-5 mt-5 fs-0">Projeto ONGs na Web</h2>
-                        <p class="p-projetos pb-2 ">O primeiro projeto do coletivo é o ONGs na WEB, com o propósito de auxiliar organizações não governamentais a terem um site de apresentação para aumentar sua visibilidade.</p>
-                        <p class="p-projetos pb-3 ">Esta iniciativa nasceu da necessidade dos desenvolvedores e web designers de aplicar seus conhecimentos e construir portfólios, ao mesmo tempo em que reconhecemos a invisibilidade enfrentada por muitas ONGs no Brasil que não possuem recursos para ter uma presença online. Nosso objetivo é aprimorar nossas habilidades e portfólio enquanto ajudamos instituições necessitadas.</p>
+                    <div class="col-6 col-projetos my-4 mb-md-0 px-5">
+                        <h2 class="h-projetos display-3">Projeto ONGs na Web</h2>
+                        <p class="p-projetos fs-5">
+                            O primeiro projeto do coletivo é o ONGs na WEB, com o propósito de auxiliar organizações não governamentais a terem um site de apresentação para aumentar sua visibilidade. 
+                        </p>
+                        <p class="p-projetos fs-5">
+                            Esta iniciativa nasceu da necessidade dos profissionais envolvidos de aplicar seus conhecimentos e construir portfólios, ao mesmo tempo em que reconhecemos a invisibilidade enfrentada por muitas ONGs no Brasil que não possuem recursos para ter uma presença online. Nosso objetivo é aprimorar nossas habilidades e portfólio enquanto ajudamos instituições necessitadas.
+                        </p>
                     </div>
                 </div>
             </div>
