style: retira imagens sem uso.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end">
-                        <img class="img-fluid" src="./img/equipe/imagem sessao equipe.png" alt="">
+                        <img class="img-fluid" src="./img/maos-dadas.png" alt="">
                     </div>
                 </div>
             </div>
