--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header>
         <div class="container-fluid">
             <div class="row align-items-end align-items-xl-center header flex-column flex-sm-row">
-                <div class="col p-4 py-5 mt-4 mt-md-0 ps-lg-5 ms-sm-5">
+                <div class="col p-4 py-5 mt-4 mt-md-0 ps-sm-5 ms-xl-4">
                     <h1 class="h1-header display-3">Grupo de Idosos Viver Mais</h1>
                     <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia e longevidade!</p>
                     <p class="p-home fs-5">Faça parte dessa história.</p>
@@ -74,7 +74,7 @@
                     <div class="col-4 mt-5 mb-0 mb-lg-5 quem-somos text-center">
                         <img src="./img/cacto.png" alt="cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
-                    <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-5 pt-4">
+                    <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-4 p-md-5 pt-4">
                         <h2 class="title-green display-3">Quem Somos</h2>
                         <p class="p-quem text-black fs-5">
                             O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade
@@ -90,7 +90,7 @@
         </section>
         <!--conheça nossos porpósitos-->
         <section class="proposito">
-            <div class="container-fluid p-5">
+            <div class="container-fluid p-4 p-sm-5">
                 <div class="row">
                     <div class="col-12 col-md-4 d-flex align-items-center text-start pb-4 pb-md-0">
                         <h2 class="text-conheca display-3 lh-1">Conheça nossos Propósitos</h2>
@@ -133,10 +133,10 @@
         <section>
             <div class="container">
                 <div class="row align-items-center flex-column flex-sm-row">
-                    <div class="col-4 mt-5 col-projetos text-center pb-0">
+                    <div class="col-12 col-md-4 mt-5 col-projetos text-center pb-0">
                         <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="">
                     </div>
-                    <div class="col-6 col-projetos my-4 mb-md-0 px-5">
+                    <div class="col-12 col-md-6 col-projetos my-4 mb-md-0 px-4 px-sm-5">
                         <h2 class="h-projetos display-3">Projetos</h2>
                         <p class="p-projetos fs-5">
                             Nosso Grupo conta com diversos projetos acontecendo simultaneamente sempre
@@ -153,7 +153,7 @@
         <section class="atividades">
             <div class="container-fluid">
                 <div class="row align-items-center flex-column flex-sm-row">
-                    <div class="col-5 p-md-5 m-0 p-0 mt-4 mb-4 text-atividades">
+                    <div class="col-5 px-4 px-sm-5 py-md-0 m-0 mt-4 mb-4 text-atividades">
                         <h2 class="display-3 title-brown title-atividades">Atividades</h2>
                         <p class="p-atividades fs-5">
                             Descubra sorrisos e participação ativa, conheça as vibrantes atividades
@@ -233,7 +233,7 @@
         <section>
             <div class="container-fluid">
                 <div class="row align-items-end align-items-lg-center">
-                    <div class="col-12 col-md-5 pb-0 pb-md-5 px-5 py-5">
+                    <div class="col-12 col-md-5 pb-0 pb-md-5 px-4 px-sm-5 py-5">
                         <h2 class="display-3 title-equipe">Nossa Equipe</h2>
                         <p class="p-equipe fs-5">
                             O Grupo de Idosos Viver mais conta com uma equipe multidisciplinar pronta
@@ -252,7 +252,7 @@
         <!--apoia-->
         <section class="apoia pt-4" id="apoia">
             <div class="row container-fluid align-items-end pe-0">
-                <div class="col-12 text-apoia text-black col-md-6 py-4 mb-md-3 mb-0 px-5">
+                <div class="col-12 text-apoia text-black col-md-6 py-4 mb-md-3 mb-0 px-4 px-sm-5">
                     <h2 class="h1-apoia display-5">Apoie o GIVM</h2>
                     <p class="p-apoia text-black">
                         Ao contribuir financeiramente para nossa ONG, você se torna parte fundamental da
