--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -111,7 +111,7 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
                                     alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Ana<br />Martins</h5>
+                                    <h5 class="card-title text-white fs-2">Ana<br>Martins</h5>
                                     <p class="card-text text-white">
                                         Organizadora do Coletivo e buscador de clientes
                                     </p>
@@ -124,7 +124,7 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
                                     alt="Foto do colaborador Erick" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Erick<br />Rosa</h5>
+                                    <h5 class="card-title text-white fs-2">Erick<br>Rosa</h5>
                                     <p class="card-text text-white">
                                         Organizador do Coletivo e Analista de Sistemas
                                     </p>
@@ -137,7 +137,7 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
                                     alt="Foto do colaborador Gabriel" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">Gabriel<br />Santiago</h5>
+                                    <h5 class="card-title text-white fs-2">Gabriel<br>Santiago</h5>
                                     <p class="card-text text-white">Tester</p>
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                                     alt="Foto do colaborador João" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-white fs-2">João<br />Arruda</h5>
+                                    <h5 class="card-title text-white fs-2">João<br>Arruda</h5>
                                     <p class="card-text text-white">Product Designer</p>
                                 </div>
                             </div>
